# SenseVoiceASR

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
core/: __init__.py  asr_engine.py  ws_service.py
example/: test_engine.py  test_server.py
