[project]
name = "asr"
version = "0.1.0"
description = "Real-time streaming ASR service based on FunASR SenseVoice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "funasr>=1.2.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "torchaudio>=2.2.0",
    "torch>=2.2.0",
    "modelscope>=1.15.0",
]

[project.scripts]
asr-server = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
